--- a/.stylelintrc
+++ b/.stylelintrc
@@ -99,7 +99,17 @@
     {
       "files": ["*.(html|vue)", "**/*.(html|vue)"],
       "rules": {
-        "unit-allowed-list": ["em", "rem", "px", "%", "s", "vw", "vh", "ms"]
+        "unit-allowed-list": [
+          "em",
+          "rem",
+          "px",
+          "%",
+          "s",
+          "vw",
+          "vh",
+          "ms",
+          "deg"
+        ]
       },
       "customSyntax": "postcss-html"
     }
