--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "platform",
   "private": false,
-  "description": "A unified navigation site",
+  "description": "一个有趣的工具站",
   "packageManager": "pnpm@8.6.11",
   "version": "1.0.0",
   "funding": "https://github.com/sponsors/szmxx",
@@ -51,8 +51,11 @@
     "@iconify-json/carbon": "^1.1.19",
     "@pinia/nuxt": "^0.4.11",
     "@vant/nuxt": "^1.0.2",
+    "@vueuse/core": "^10.4.1",
     "@vueuse/nuxt": "^10.3.0",
     "dayjs": "^1.11.9",
+    "html-to-image": "^1.11.11",
+    "lodash-es": "^4.17.21",
     "nuxt": "^3.6.5",
     "vant": "^4.6.8"
   },
@@ -63,6 +66,7 @@
     "@nuxt/devtools": "^0.7.4",
     "@nuxtjs/color-mode": "^3.3.0",
     "@nuxtjs/i18n": "8.0.0-rc.4",
+    "@types/lodash-es": "^4.17.9",
     "@unocss/nuxt": "^0.54.1",
     "@vite-pwa/nuxt": "^0.1.0",
     "@vue/eslint-config-prettier": "^8.0.0",
