fix(core): fix style and add nuxt-image

--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
   },
   "dependencies": {
     "@iconify-json/ion": "^1.1.12",
+    "@nuxt/image-edge": "1.0.0-rc.2-28252196.34e7c67",
     "@pinia/nuxt": "^0.4.11",
     "@vant/nuxt": "^1.0.2",
     "@vueuse/core": "^10.4.1",
