feat(core): add nuxt-image and cloudinary deploy

--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
-NUXT_APP_NAME = '猫染'
+cloud_name=dcro7qdzl
+api_key=215667428414891
+api_secret=ADYxQQQD8dtWNgf-jlCxAxWWMrQ
+private_cdn=True
+signature_algorithm=sha256
