--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "style": "stylelint ./**/*.{css,scss,vue}",
     "tslint": "vue-tsc --noEmit",
     "commit": "git-cz",
-    "changelogen": "changelogen --bump"
+    "changelogen": "changelogen --bump",
+    "images": "bash images.sh"
   },
   "dependencies": {
     "@iconify-json/ion": "^1.1.12",
