--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "html-to-image": "^1.11.11",
     "lodash-es": "^4.17.21",
     "nuxt": "^3.6.5",
+    "nuxt-seo-kit": "^1.3.13",
     "vant": "^4.6.8"
   },
   "devDependencies": {
