--- a/package.json
+++ b/package.json
@@ -56,8 +56,9 @@
     "@vueuse/core": "^10.4.1",
     "@vueuse/nuxt": "^10.3.0",
     "dayjs": "^1.11.9",
-    "html-to-image": "^1.11.11",
+    "file-saver": "^2.0.5",
     "lodash-es": "^4.17.21",
+    "modern-screenshot": "^4.4.31",
     "nuxt": "^3.6.5",
     "nuxt-seo-kit": "^1.3.13",
     "vant": "^4.6.8"
