--- a/package.json
+++ b/package.json
@@ -59,8 +59,7 @@
     "file-saver": "^2.0.5",
     "lodash-es": "^4.17.21",
     "modern-screenshot": "^4.4.31",
-    "nuxt": "^3.6.5",
-    "nuxt-seo-kit": "^1.3.13",
+    "nuxt": "^3.7.3",
     "vant": "^4.6.8"
   },
   "devDependencies": {
@@ -70,6 +69,7 @@
     "@nuxt/devtools": "^0.7.4",
     "@nuxtjs/color-mode": "^3.3.0",
     "@nuxtjs/i18n": "8.0.0-rc.4",
+    "@nuxtseo/module": "2.0.0-beta.15",
     "@types/lodash-es": "^4.17.9",
     "@unocss/nuxt": "^0.54.1",
     "@vite-pwa/nuxt": "^0.1.0",
