--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   ],
   "scripts": {
     "build": "nuxi build --dotenv .env.production",
-    "dev": "nuxi dev --dotenv .env.development",
+    "dev": "nuxi dev --dotenv .env.development --host",
     "dev:pwa": "VITE_PLUGIN_PWA=true nuxi dev",
     "start": "node .output/server/index.mjs",
     "typecheck": "vue-tsc --noEmit",
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "@iconify-json/ion": "^1.1.12",
+    "@iconify-json/material-symbols": "^1.1.59",
     "@nuxt/image-edge": "1.0.0-rc.2-28252196.34e7c67",
     "@pinia/nuxt": "^0.4.11",
     "@vant/nuxt": "^1.0.2",
@@ -59,6 +60,7 @@
     "file-saver": "^2.0.5",
     "lodash-es": "^4.17.21",
     "modern-screenshot": "^4.4.31",
+    "monaco-editor": "^0.43.0",
     "nuxt": "^3.7.3",
     "vant": "^4.6.8"
   },
