feat(core): add chat export feature

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "vite"
   ],
   "scripts": {
-    "build": "nuxi build --dotenv .env.production",
+    "build": "nuxi build --dotenv .env.production && pnpm exec playwright install ",
     "dev": "nuxi dev --dotenv .env.development --host",
     "dev:pwa": "VITE_PLUGIN_PWA=true nuxi dev",
     "start": "node .output/server/index.mjs",
@@ -62,6 +62,7 @@
     "modern-screenshot": "^4.4.31",
     "monaco-editor": "^0.43.0",
     "nuxt": "^3.7.3",
+    "rrweb": "2.0.0-alpha.11",
     "vant": "^4.6.8"
   },
   "devDependencies": {
@@ -72,6 +73,7 @@
     "@nuxtjs/color-mode": "^3.3.0",
     "@nuxtjs/i18n": "8.0.0-rc.4",
     "@nuxtseo/module": "2.0.0-beta.15",
+    "@types/file-saver": "^2.0.5",
     "@types/lodash-es": "^4.17.9",
     "@unocss/nuxt": "^0.54.1",
     "@vite-pwa/nuxt": "^0.1.0",
@@ -89,8 +91,10 @@
     "lint-staged": "^14.0.1",
     "nuxt-vitest": "^0.10.2",
     "pinia": "^2.1.6",
+    "playwright": "^1.38.1",
     "postcss-html": "^1.5.0",
     "prettier": "^3.0.3",
+    "rrweb-player": "1.0.0-alpha.4",
     "sass": "^1.66.1",
     "stylelint": "^15.10.3",
     "stylelint-config-standard": "^34.0.0",
